fix: links gapping and styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,7 +46,6 @@ ul {
 }
 
 li {
-  padding-left: 4px;
 }
 
 th,
